force-app/main/default/objects/sked_Activity_Collection_Operation__c/sked_Activity_Collection_Operation__c.object-meta.xml
<CustomObject>
    <description>Junction object between Activity - Collection Operation</description>
    <label>Activity Collection Operation</label>
    <nameField>
        <displayFormat>ACO - {0000}</displayFormat>
        <label>Activity Collection Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Collection Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>