force-app/main/default/objects/sked_Activity_Collection_Operation__c/fields/sked_Activity__c.field-meta.xml
<CustomField>
    <fullName>sked_Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Activity Collection Operations</relationshipLabel>
    <relationshipName>sked_Activity_Collection_Operations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>