force-app/main/default/objects/sked_Activity_Collection_Operation__c/fields/sked_Biomed_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Biomed_Collection_Operation__c</fullName>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Activity Collection Operations</relationshipLabel>
    <relationshipName>Activity_Collection_Operations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>