force-app/main/default/objects/sked_Activity_Collection_Operation__c/fields/sked_District__c.field-meta.xml
<CustomField>
    <fullName>sked_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>Activity Collection Operations</relationshipLabel>
    <relationshipName>Activity_Collection_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>